# xcode-test-runner

./: .gitignore  CLAUDE.md  MVP_Spec.md  index.html  package-lock.json  package.json
.claude/: settings.local.json
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: 001_create_runs.sql  002_create_test_results.sql  003_create_settings.sql  004_projects.sql  005_add_default_simulator.sql  006_project_discovery.sql  007_suites.sql  008_run_target_results.sql
src-tauri/src/: lib.rs  main.rs  state.rs
src-tauri/src/commands/: discovery.rs  execution.rs  history.rs  mod.rs  results.rs  settings.rs  simulators.rs
src-tauri/src/discovery/: mod.rs  swift_package.rs  test_plan.rs  xcode_project.rs
src-tauri/src/execution/: mod.rs  runner.rs  swift_test.rs  xcodebuild.rs
src-tauri/src/models/: mod.rs  project.rs  run.rs  settings.rs
src-tauri/src/parsing/: mod.rs  stdout_parser.rs  swift_test_parser.rs  xcresult.rs
src-tauri/src/persistence/: db.rs  mod.rs  runs.rs  settings.rs
src/components/common/: Badge.tsx  ProgressBar.tsx  SearchInput.tsx
src/components/dashboard/: ActionButtons.tsx  LiveOutputTerminal.tsx  RecentRunsList.tsx  (+1 more)
src/hooks/: useDiscovery.ts  useProjects.ts  useRunHistory.ts  useSettings.ts  useSuites.ts  useTestExecution.ts
src/lib/: constants.ts  db.ts  formatters.ts
src/pages/: DashboardPage.tsx  HistoryPage.tsx  RunDetailsPage.tsx  SettingsPage.tsx  TargetsPage.tsx
src/stores/: executionStore.ts  selectionStore.ts
src/styles/: globals.css
(+11 files in other folders)
